{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 77,
  "lineage": "bd64c341-fd14-0ef9-fbf5-c025adbbbcbf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05bef6ce6baa090c4",
            "arn": "arn:aws:ec2:us-east-1:730335336250:elastic-ip/eipalloc-05bef6ce6baa090c4",
            "domain": "vpc",
            "id": "eipalloc-05bef6ce6baa090c4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-207-155-39.compute-1.amazonaws.com",
            "public_ip": "52.207.155.39",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335336250:internet-gateway/igw-0d7fd107d00683493",
            "id": "igw-0d7fd107d00683493",
            "owner_id": "730335336250",
            "tags": {
              "Name": "project-igw"
            },
            "tags_all": {
              "Name": "project-igw"
            },
            "vpc_id": "vpc-0235f5ea6483aa4a8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05bef6ce6baa090c4",
            "association_id": "eipassoc-002f2687dee9570a3",
            "connectivity_type": "public",
            "id": "nat-0477174ef06d1906b",
            "network_interface_id": "eni-01d8b0f8e6a0c0984",
            "private_ip": "10.0.1.174",
            "public_ip": "52.207.155.39",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-052c267e072b8a2cf",
            "tags": {
              "Name": "project-nat"
            },
            "tags_all": {
              "Name": "project-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335336250:route-table/rtb-0a18eca9f1cc91917",
            "id": "rtb-0a18eca9f1cc91917",
            "owner_id": "730335336250",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0477174ef06d1906b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0235f5ea6483aa4a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335336250:route-table/rtb-0108692629cb3a3e8",
            "id": "rtb-0108692629cb3a3e8",
            "owner_id": "730335336250",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d7fd107d00683493",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0235f5ea6483aa4a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdb7fdb2ef443407",
            "route_table_id": "rtb-0a18eca9f1cc91917",
            "subnet_id": "subnet-0ee15382af24b3bcb"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0100aed60d18f3fc9",
            "route_table_id": "rtb-0a18eca9f1cc91917",
            "subnet_id": "subnet-01d3df3b126a8bb0a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e90b03491c3c639",
            "route_table_id": "rtb-0108692629cb3a3e8",
            "subnet_id": "subnet-052c267e072b8a2cf"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b25f9e29a40af436",
            "route_table_id": "rtb-0108692629cb3a3e8",
            "subnet_id": "subnet-07a3fcfc6fbee1ca0"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335336250:security-group/sg-0047f057fa0ae357e",
            "description": "Security group for application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0047f057fa0ae357e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "730335336250",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0235f5ea6483aa4a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335336250:security-group/sg-08e5ec2eba579f918",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e5ec2eba579f918",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "730335336250",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0235f5ea6483aa4a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335336250:security-group/sg-0687de5677a1790b6",
            "description": "Security group for database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0687de5677a1790b6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00595c492b15a45bb"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00595c492b15a45bb"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "730335336250",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0235f5ea6483aa4a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335336250:security-group/sg-00595c492b15a45bb",
            "description": "Security group for web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00595c492b15a45bb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08e5ec2eba579f918"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0047f057fa0ae357e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "730335336250",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0235f5ea6483aa4a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335336250:subnet/subnet-0ee15382af24b3bcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee15382af24b3bcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335336250",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0235f5ea6483aa4a8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335336250:subnet/subnet-01d3df3b126a8bb0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d3df3b126a8bb0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335336250",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0235f5ea6483aa4a8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335336250:subnet/subnet-052c267e072b8a2cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052c267e072b8a2cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335336250",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0235f5ea6483aa4a8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335336250:subnet/subnet-07a3fcfc6fbee1ca0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a3fcfc6fbee1ca0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335336250",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0235f5ea6483aa4a8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335336250:vpc/vpc-0235f5ea6483aa4a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02068fa517a804875",
            "default_route_table_id": "rtb-016a7d10710ab1fc6",
            "default_security_group_id": "sg-0d752541312ebdc7c",
            "dhcp_options_id": "dopt-0d108321823c87f44",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0235f5ea6483aa4a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-016a7d10710ab1fc6",
            "owner_id": "730335336250",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            }
          }
        }
      ]
    }
  ]
}